﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$HeadURL$

2007-03-02 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php: bug #1672379 Call to undefined function PMA_removeCookie()

2007-03-01 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php: bug #1671813 CVE-2006-1549 deep recursion crash

2007-02-28 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/config.default.php: set $cfg['Servers'][$i]['ssl'] default
      value to false, we got reports from some users having problems with the
      default value of true

2007-02-27 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1659176, memory error displaying
      a table with large BLOBs
    ### 2.10.0 released

2007-02-26 Marc Delisle  <lem9@users.sourceforge.net>
    * scripts/upgrade_tables_mysql_4_1_2+.sql: bug #1668662,
      can create the new pma_designer_coords table 

2007-02-25 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1667466, undefined variable when
      export + save on server
    * server_status.php: bug #1665930, undefined PHP_SELF

2007-02-24 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/config.default.php: RFE #1621437, HEX and UNHEX were not
      available for a BINARY field

2007-02-21 Marc Delisle  <lem9@users.sourceforge.net>
    * pmd/scripts/move.js: bug #1650770, Designer and Mac OSX,
      thanks to Ivan Kirillov

2007-02-17 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: patch #1659347, missing doc for some config,
     thanks to Isaac Bennetch
    * libraries/export/sql.php: bug #1663336, undefined variable

2007-02-16 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php, footer.inc.php: avoid generating big links
      after an upload into a BLOB

2007-02-14 Marc Delisle  <lem9@users.sourceforge.net>