@@ -5,6 +5,9 @@ phpMyAdmin - ChangeLog
 $Id$
 $HeadURL$
 
+2007-03-02 Marc Delisle  <lem9@users.sourceforge.net>
+    * server_status.php: use PMA_getenv('PHP_SELF'), thanks to Sebastian
+
 2007-03-02 Sebastian Mendel <cybot_tm@users.sourceforge.net>
     * libraries/common.lib.php: bug #1672379 Call to undefined function PMA_removeCookie()
 
